fix: add overflow for container

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@
     padding: 10px;
     box-shadow: 0 0 10px #e0e0e0;
     background: #ffffff;
+    overflow: hidden;
 }
 .square {
     width: 8px;
